headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef void*               IPLhandle;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef struct {
        IPLfloat32 x;   
        IPLfloat32 y;   
        IPLfloat32 z;   
    } IPLVector3;
    typedef enum {
        IPL_SCENETYPE_PHONON,   
        IPL_SCENETYPE_EMBREE,   
        IPL_SCENETYPE_FIRERAYS, 
        IPL_SCENETYPE_CUSTOM    
    } IPLSceneType;
    typedef struct {
        IPLSceneType        sceneType;              
        IPLint32            numRays;                
        IPLint32            numDiffuseSamples;      
        IPLint32            numBounces;             
        IPLfloat32          irDuration;             
        IPLint32            ambisonicsOrder;        
        IPLint32            maxConvolutionSources;  
    } IPLSimulationSettings;
    IPLAPI IPLerror iplCreateEnvironment(IPLhandle context, IPLhandle computeDevice,
        IPLSimulationSettings simulationSettings, IPLhandle scene, IPLhandle probeManager, IPLhandle* environment);
    IPLAPI IPLvoid iplDestroyEnvironment(IPLhandle* environment);
    IPLAPI IPLvoid iplSetNumBounces(IPLhandle environment, IPLint32 numBounces);
    typedef enum {
        IPL_CONVOLUTIONTYPE_PHONON,         
        IPL_CONVOLUTIONTYPE_TRUEAUDIONEXT   
    } IPLConvolutionType;
    typedef struct {
        IPLint32            samplingRate;       
        IPLint32            frameSize;          
        IPLConvolutionType  convolutionType;    
    } IPLRenderingSettings;
    typedef enum {
        IPL_CHANNELLAYOUTTYPE_SPEAKERS,     
        IPL_CHANNELLAYOUTTYPE_AMBISONICS    
    } IPLChannelLayoutType;
    typedef enum {
        IPL_CHANNELLAYOUT_MONO,             
        IPL_CHANNELLAYOUT_STEREO,           
        IPL_CHANNELLAYOUT_QUADRAPHONIC,     
        IPL_CHANNELLAYOUT_FIVEPOINTONE,     
        IPL_CHANNELLAYOUT_SEVENPOINTONE,    
        IPL_CHANNELLAYOUT_CUSTOM            
    } IPLChannelLayout;
    typedef enum {
        IPL_AMBISONICSORDERING_FURSEMALHAM, 
        IPL_AMBISONICSORDERING_ACN          
    } IPLAmbisonicsOrdering;
    typedef enum {
        IPL_AMBISONICSNORMALIZATION_FURSEMALHAM,    
        IPL_AMBISONICSNORMALIZATION_SN3D,           
        IPL_AMBISONICSNORMALIZATION_N3D             
    } IPLAmbisonicsNormalization;
    typedef enum {
        IPL_CHANNELORDER_INTERLEAVED,   
        IPL_CHANNELORDER_DEINTERLEAVED  
    } IPLChannelOrder;
    typedef struct {
        IPLChannelLayoutType        channelLayoutType;          
        IPLChannelLayout            channelLayout;              
        IPLint32                    numSpeakers;                
        IPLVector3*                 speakerDirections;          
        IPLint32                    ambisonicsOrder;            
        IPLAmbisonicsOrdering       ambisonicsOrdering;         
        IPLAmbisonicsNormalization  ambisonicsNormalization;    
        IPLChannelOrder             channelOrder;               
    } IPLAudioFormat;
    typedef struct {
        IPLAudioFormat  format;                 
        IPLint32        numSamples;             
        IPLfloat32*     interleavedBuffer;      
        IPLfloat32**    deinterleavedBuffer;    
    } IPLAudioBuffer;