src/bindgen.rs

extern "C" {
    /// Destroys an Environment object. If any other API objects are still referencing the Environment object, it will
    /// not be destroyed; destruction occurs when the object's reference count reaches zero.
    ///
    /// \param  environment         [in, out] Address of a handle to the Environment object to destroy.
    pub fn iplDestroyEnvironment(environment: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Sets the number of bounces to use for real-time simulations that use an Environment object. Calling this
    /// function overrides the value of \c bounces set on the \c IPLSimulationSettings structure passed when
    /// calling \c ::iplCreateEnvironment to create this Environment object.
    ///
    /// \param  environment         Handle to an Environment object.
    /// \param  numBounces          The number of bounces to use for all subsequent simulations in the Environment.
    pub fn iplSetNumBounces(environment: IPLhandle, numBounces: IPLint32) -> IPLvoid;
}
pub const IPLConvolutionType_IPL_CONVOLUTIONTYPE_PHONON: IPLConvolutionType = 0;
pub const IPLConvolutionType_IPL_CONVOLUTIONTYPE_TRUEAUDIONEXT: IPLConvolutionType = 1;
pub type IPLConvolutionType = u32;
/// Describes various properties of the audio processing pipeline. Many Phonon API objects that are used by the
/// audio engine need to know how the audio processing pipeline (i.e., your audio engine) applies DSP effects to
/// audio data. This structure describes the key parameters.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLRenderingSettings {
    /// < The sampling rate (in Hz) of any audio to be processed by Phonon.
    /// All audio that is passed to Phonon must use the same sampling
    /// rate.** Phonon will output audio at the same sampling rate as its
    /// input; no sampling rate conversion will be performed. Supported
    /// sampling rates are 24000 Hz, 44100 Hz, and 48000 Hz.
    pub samplingRate: IPLint32,
    /// < The number of samples in a single frame of audio. The value of
    /// this parameter should be obtained from your audio engine.
    pub frameSize: IPLint32,
    /// < The convolution algorithm to use for any Convolution Effect
    /// objects created for this audio processing pipeline.
    pub convolutionType: IPLConvolutionType,
}
#[test]
fn bindgen_test_layout_IPLRenderingSettings() {
    assert_eq!(
        ::std::mem::size_of::<IPLRenderingSettings>(),
        12usize,
        concat!("Size of: ", stringify!(IPLRenderingSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLRenderingSettings>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLRenderingSettings))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLRenderingSettings>())).samplingRate as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLRenderingSettings),
            "::",
            stringify!(samplingRate)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLRenderingSettings>())).frameSize as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLRenderingSettings),
            "::",
            stringify!(frameSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLRenderingSettings>())).convolutionType as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLRenderingSettings),
            "::",
            stringify!(convolutionType)
        )
    );
}
pub const IPLChannelLayoutType_IPL_CHANNELLAYOUTTYPE_SPEAKERS: IPLChannelLayoutType = 0;
pub const IPLChannelLayoutType_IPL_CHANNELLAYOUTTYPE_AMBISONICS: IPLChannelLayoutType = 1;
pub type IPLChannelLayoutType = u32;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_MONO: IPLChannelLayout = 0;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_STEREO: IPLChannelLayout = 1;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_QUADRAPHONIC: IPLChannelLayout = 2;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_FIVEPOINTONE: IPLChannelLayout = 3;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_SEVENPOINTONE: IPLChannelLayout = 4;
pub const IPLChannelLayout_IPL_CHANNELLAYOUT_CUSTOM: IPLChannelLayout = 5;
pub type IPLChannelLayout = u32;
pub const IPLAmbisonicsOrdering_IPL_AMBISONICSORDERING_FURSEMALHAM: IPLAmbisonicsOrdering = 0;
pub const IPLAmbisonicsOrdering_IPL_AMBISONICSORDERING_ACN: IPLAmbisonicsOrdering = 1;
pub type IPLAmbisonicsOrdering = u32;
pub const IPLAmbisonicsNormalization_IPL_AMBISONICSNORMALIZATION_FURSEMALHAM : IPLAmbisonicsNormalization = 0 ;
pub const IPLAmbisonicsNormalization_IPL_AMBISONICSNORMALIZATION_SN3D : IPLAmbisonicsNormalization = 1 ;
pub const IPLAmbisonicsNormalization_IPL_AMBISONICSNORMALIZATION_N3D: IPLAmbisonicsNormalization =
    2;
pub type IPLAmbisonicsNormalization = u32;
pub const IPLChannelOrder_IPL_CHANNELORDER_INTERLEAVED: IPLChannelOrder = 0;
pub const IPLChannelOrder_IPL_CHANNELORDER_DEINTERLEAVED: IPLChannelOrder = 1;
pub type IPLChannelOrder = u32;
/// The format of an audio buffer. Whenever you pass audio data to or from Phonon, you must describe the format in
/// which the audio is encoded. **Phonon only supports uncompressed PCM wave data, stored in 32-bit floating point
/// format**. However, Phonon supports many different multi-channel and Ambisonics formats, and the
/// \c IPLAudioFormat tells Phonon how to interpret a buffer of audio data.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAudioFormat {
    /// < Indicates whether or not the audio should be
    /// interpreted as Ambisonics data.
    pub channelLayoutType: IPLChannelLayoutType,
    /// < Specifies the speaker configuration used for
    /// multi-channel, speaker-based audio data. Ignored
    /// if \c channelLayoutType is
    /// \c ::IPL_CHANNELLAYOUTTYPE_AMBISONICS.
    pub channelLayout: IPLChannelLayout,
    /// < The number of channels in the audio data. Only
    /// used if \c channelLayoutType is
    /// \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS and
    /// \c channelLayout is
    /// \c ::IPL_CHANNELLAYOUT_CUSTOM.
    pub numSpeakers: IPLint32,
    /// < An array of \c IPLVector3 objects indicating the
    /// direction of each speaker relative to the user.
    /// Can be \c NULL. Only used if \c channelLayoutType
    /// is \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS and
    /// \c channelLayout is
    /// \c ::IPL_CHANNELLAYOUT_CUSTOM.
    pub speakerDirections: *mut IPLVector3,
    /// < The order of Ambisonics to use. Must be between 0
    /// and 3. Ignored if \c channelLayoutType is
    /// \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS.
    pub ambisonicsOrder: IPLint32,
    /// < The ordering of Ambisonics channels within the
    /// data. Ignored if \c channelLayoutType is
    /// \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS.
    pub ambisonicsOrdering: IPLAmbisonicsOrdering,
    /// < The normalization scheme used for Ambisonics
    /// data. Ignored if \c channelLayoutType is
    /// \c ::IPL_CHANNELLAYOUTTYPE_SPEAKERS.
    pub ambisonicsNormalization: IPLAmbisonicsNormalization,
    /// < Whether the audio data is interleaved or
    /// deinterleaved.
    pub channelOrder: IPLChannelOrder,
}
#[test]
fn bindgen_test_layout_IPLAudioFormat() {
    assert_eq!(
        ::std::mem::size_of::<IPLAudioFormat>(),
        40usize,
        concat!("Size of: ", stringify!(IPLAudioFormat))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLAudioFormat>(),
        8usize,
        concat!("Alignment of ", stringify!(IPLAudioFormat))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).channelLayoutType as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(channelLayoutType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).channelLayout as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(channelLayout)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).numSpeakers as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(numSpeakers)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).speakerDirections as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(speakerDirections)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).ambisonicsOrder as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(ambisonicsOrder)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).ambisonicsOrdering as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(ambisonicsOrdering)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<IPLAudioFormat>())).ambisonicsNormalization as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(ambisonicsNormalization)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLAudioFormat>())).channelOrder as *const _ as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLAudioFormat),
            "::",
            stringify!(channelOrder)
        )
    );
}
/// A buffer containing audio data. All audio data passed to or from Phonon must be packaged in \c IPLAudioBuffer
/// objects, which describe the format and size of the audio data.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLAudioBuffer {
    /// < The format of the audio data.
    pub format: IPLAudioFormat,
    /// < The number of samples in the audio buffer. The total number of
    /// elements in the audio buffer is equal to \c numSamples *
    /// \c format.numSpeakers.
    pub numSamples: IPLint32,
    /// < A pointer to a contiguous block of memory containing interleaved
    /// audio data in the format described by \c format. Can be \c NULL
    /// if \c format.channelOrder is \c ::IPL_CHANNELORDER_DEINTERLEAVED.
    pub interleavedBuffer: *mut IPLfloat32,
    /// < A pointer to an array of pointers, each of which points to a block
    /// of memory containing audio data for a single channel of audio data
    /// in the format described by \c format. In other words,
    /// deinterleaved audio data doesn't have to be stored contiguously
    /// in memory. Can be \c NULL if \c format.channelOrder is
    /// \c ::IPL_CHANNELORDER_INTERLEAVED.
    pub deinterleavedBuffer: *mut *mut IPLfloat32,
}
